# barbearia

./: README.md  example.env  models.py  pyproject.toml  routes.py  run.py  script_database.sql
app/: __init__.py  config.py  models.py  routes.py  utils.py
app/barbeiros/: models.py  routes.py
app/clientes/: models.py  routes.py
app/produtos/: models.py  routes.py
